Added route to fetch loans by user id
added route to fetch loans by user id and order them by loan date desc, added api model and include it in swagger
